Java 11 is now the minimum java version