@@ -17,7 +17,7 @@ import javax.ws.rs.client.Client;
 import javax.ws.rs.client.WebTarget;
 import javax.ws.rs.core.Response;
 import java.net.URI;
-import java.util.Arrays;
+import java.util.List;
 
 import static fr.chaffotm.geobase.assertion.ResponseAssert.assertThat;
 import static javax.ws.rs.core.MediaType.APPLICATION_JSON_TYPE;
@@ -45,7 +45,7 @@ public class QuizTypeEndpointIT {
     private QuizType build(final QuestionType questionType, final AnswerType... answerTypes) {
         final QuizType type = new QuizType();
         type.setQuestionType(questionType);
-        type.setAnswerTypes(Arrays.asList(answerTypes));
+        type.setAnswerTypes(List.of(answerTypes));
         return type;
     }
 
