@@ -4,28 +4,29 @@ import fr.chaffotm.query.criteria.FieldOrder;
 import fr.chaffotm.query.criteria.Sort;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 public class SortConverter {
 
-    private static final String PROPERTY_PATTERN = "\\s*(-)?\\w+\\s*";
+    private static final String PROPERTY_REGEXP = "\\s*(-)?\\w+\\s*";
 
-    private static final String DELIMITER_PATTERN = "\\s*\\|\\s*";
+    private static final String DELIMITER_REGEXP = "\\s*\\|\\s*";
 
-    private static final String GRAMMAR_PATTERN = PROPERTY_PATTERN + "(" + DELIMITER_PATTERN + PROPERTY_PATTERN + ")*";
+    private static final String GRAMMAR_PATTERN = PROPERTY_REGEXP + "(" + DELIMITER_REGEXP + PROPERTY_REGEXP + ")*";
+
+    private static final Pattern DELIMITER_PATTERN = Pattern.compile(DELIMITER_REGEXP);
 
     private static final Pattern VALIDATION_PATTERN = Pattern.compile(GRAMMAR_PATTERN);
 
     public List<Sort> getAsList(final String sortExpression) {
         if (sortExpression == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         final String trimExpression = sortExpression.trim();
         if (trimExpression.isEmpty()) {
-            return Collections.emptyList();
+            return List.of();
         }
         return buildList(trimExpression);
     }
@@ -33,7 +34,7 @@ public class SortConverter {
     private List<Sort> buildList(final String sortExpression) {
         validate(sortExpression);
         final List<Sort> sorts = new ArrayList<>();
-        final String[] attributes = sortExpression.split(DELIMITER_PATTERN);
+        final String[] attributes = DELIMITER_PATTERN.split(sortExpression);
         for (final String attribute : attributes) {
             sorts.add(build(attribute));
         }
